# nlp_sql_datamanagement

./: .env.example  .gitignore  FRONTEND_UPDATE_GUIDE.md  QUICK_START.md  README.md  README_PROTOTYPE.md  VALIDATION_GUIDE.md  launch_prototype.py  pyproject.toml  requirements.txt  result_example.html  save_query_response.py  start_backend.py
.github/: copilot-instructions.md
backend/: app.py
config/: __init__.py  database_config.py  mock_responses.py  settings.py
database/: __init__.py  connection.py  models.py  query_executor.py
examples/: demo_usage.py  quick_test.py
frontend/: index.html
mcp_client/: __init__.py  claude_interface.py  client.py  session_manager.py
mcp_server/: __init__.py  main.py
mcp_server/tools/: __init__.py  advanced_operations.py  data_analysis.py  data_ingestion.py  query_execution.py  query_executor.py
nlp/: __init__.py  intent_classifier.py
tests/: __init__.py  conftest.py
