[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlp-sql-mcp"
version = "0.1.0"
description = "Intelligent NLP to SQL data management system using MCP architecture"
authors = [
    {name = "Sujal P", email = "sujal@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # MCP SDK
    "mcp>=1.2.0",
    
    # Database & ORM
    "sqlalchemy>=2.0.0",
    "sqlite3",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "sqlparse>=0.4.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # AI/ML for NLP
    "anthropic>=0.8.0",
    "openai>=1.0.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    
    # HTTP & API
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    
    # Utilities
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.6.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
nlp-sql-server = "mcp_server.main:main"
nlp-sql-client = "mcp_client.main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=mcp_server --cov=mcp_client --cov=database --cov=nlp"